# defog-python

./: pyproject.toml
defog/llm/: image_utils.py  web_search.py
defog/llm/cost/: models.py
defog/llm/providers/: anthropic_provider.py  gemini_provider.py
docs/llm/: core-chat-functions.md  web-search.md
tests/: test_code_interp.py  test_cost_calculator.py  test_image_support.py  test_llm.py  test_llm_image_support.py  test_llm_post_response_hook.py  test_llm_tool_calls.py
