[tool.ruff]
# Ignore E402 (module import not at top of file)
lint.ignore = ["E402"]

# Exclude some directories
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "*.egg-info",
    "build",
    "dist",
]

# Python version target
target-version = "py312"

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "defog"
version = "1.4.28"
description = "Defog is a Python library that helps you generate data queries from natural language questions."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Full Stack Data Pte. Ltd.", email = "founders@defog.ai" }]
dependencies = [
    "aiofiles",
    "anthropic>=0.83.0",
    "beautifulsoup4>=4.12.0",
    "bleach>=6.0.0",
    "fastmcp",
    "google-genai>=1.61.0",
    "httpx>=0.28.1",
    "jsonref",
    "mcp",
    "mistralai>=1.3.6",
    "openai>=2.23.0",
    "pandas",
    "portalocker>=3.2.0",
    "prompt-toolkit>=3.0.38",
    "psycopg2-binary>=2.9.5",
    "pwinput>=1.0.3",
    "pydantic",
    "requests>=2.28.2",
    "rich",
    "tiktoken>=0.9.0",
    "together>=1.3.11",
    "tqdm",
    "setuptools"
]

[project.optional-dependencies]
postgres = ["psycopg2-binary"]
mysql = ["mysql-connector-python"]
snowflake = ["snowflake-connector-python"]
bigquery = ["google-cloud-bigquery"]
redshift = ["psycopg2-binary"]
databricks = ["databricks-sql-connector"]
sqlserver = ["pyodbc"]
duckdb = ["duckdb>=1.3.0"]
"async-postgres" = ["asyncpg"]
"async-mysql" = ["aiomysql"]
"async-odbc" = ["aioodbc"]

[project.scripts]
defog = "defog.cli:main"

[project.urls]
Homepage = "https://github.com/defog-ai/defog-python"
Repository = "https://github.com/defog-ai/defog-python"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.setuptools.packages.find]
include = ["defog", "defog.*"]
